[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.10.0"
features = [ "v4",   "fast-rng",  ]

[dependencies.inquire]
version = "0.7.5"

[dependencies.crossterm]
version = "0.28.1"

[dependencies.serde]
version = "1.0.127"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.127"
